# praxis

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: database.py  main.py
app/controllers/: ai.py  behavioral.py  chat.py  profile.py
app/models/: __init__.py  ai_settings.py  behavioral.py  job.py  mock_interview.py  profile.py
app/repositories/: ai_settings.py  chat_session.py  job.py  job_analysis.py  job_profile.py  message.py  mock_interview.py  profile.py  user.py
app/resources/: behavioral_questions.json  interview_matrix.json  languages.json
app/services/: ai_service.py  behavioral.py  chat_session.py  job.py  job_analysis.py  job_profile.py  message.py  mock_interview.py  profile.py  user.py
app/services/ai/: __init__.py  anthropic.py  base.py  gemini.py  mistral.py  models.py  openai.py  openrouter.py  zai.py
app/static/css/: main.css
app/static/js/: job_modal.js  utils.js
app/templates/: base.html  behavioral.html  chat.html  curriculum.html  curriculum_preview.html  curriculum_print.html  index.html  job_analysis.html  login.html  mock_interview_report.html  mock_interview_session.html  mock_interview_setup.html  profile.html  setup.html  sidebar.html
app/templates/components/: print_modal.html
app/templates/partials/: job_modal.html
data/: app.db
tests/: conftest.py  test_behavioral.py  test_cascade.py  test_chat.py  test_chat_controller.py  test_database.py  test_job_analysis.py  test_jobs.py  test_mock_interview.py  test_profile.py
