[project]
name = "praxis-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.101.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "google-genai>=2.2.0",
    "gtts>=2.5.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mistralai>=2.4.5",
    "openai>=2.36.0",
    "openrouter>=0.9.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "uvicorn>=0.46.0",
    "xhtml2pdf>=0.2.17",
    "zai-sdk>=0.2.2",
]
